--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 body {
   padding-top: 5rem;
+  background-color: lightgray;
+
 }
 .starter-template {
-  padding: 3rem 1.5rem;
+  padding: 1rem 1rem;
   text-align: center;
 }
